[package]
name = "bitcoin_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "precompute_ecmult"
path = "src/precompute_ecmult.rs"

[dependencies]
byteorder = "1.4.3"
generic-array = "0.14.6"
primitive-types = "0.12.2"
zerocopy = "0.6.1"
wrapping_arithmetic = "0.1"
hex = "0.4"
rand = "0.8"